= MediaWiki release notes =

Security reminder: MediaWiki does not require PHP's register_globals
setting since version 1.2.0. If you have it on, turn it '''off''' if you can.

== MediaWiki 1.17.1 ==

This a maintenance release of the MediaWiki 1.17 branch.

=== Summary of selected changes in 1.17 ===

Selected changes since MediaWiki 1.16 that may be of interest:

* A new installer has been introduced. It has a wizard-style interface which is
  translated into many languages. Many shortcomings in the old installer were
  addressed with this rewrite. Note that it is no longer required for the config
  directory to be made writable by the webserver. Instead the generated
  LocalSettings.php file is offered as a download, which you must then upload
  to the wiki's base directory.

* ResourceLoader, a new framework for delivering client-side resources such as
  JavaScript and CSS, has been introduced. These resources are now delivered
  through the new entry point script "load.php", instead of as static files 
  served directly by the web server. This allows minification, compression and
  client-side caching to be used more effectively, which should provide a net
  performance improvement for most users. 

* Category sorting has been improved. 
** Sorting is now case insensitive.
** Sub-categories, pages and files can now be paged separately.
** When several pages are given the same sort key, they sort by their 
   names instead of randomly.

* The lowest supported version of PHP is now 5.2.3. If necessary, please
  upgrade PHP prior to upgrading MediaWiki.

=== Changes since 1.17.0 ===

* (bug 29535) Added missing Creative Commons CC0 icon.
* (bug 29726) Fixed failure to load internationalization messages in 
  client-side scripts on WebKit-based browsers.
* Fixed a bug in message transformation where the previous language could leak 
  into later transformations in the UI language.
* (bug 29091) Fixed form of native name for Ossetic language (Иронау -> Ирон)